--- a/Recursion/.vscode/settings.json
+++ b/Recursion/.vscode/settings.json
@@ -41,6 +41,7 @@
     "xtree": "cpp",
     "iostream": "cpp",
     "bitset": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "random": "cpp"
   }
 }
